# prestogres

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NOTICE  README.md  Rakefile  configure  configure.ac  presto-pggw.gemspec  presto-postgres-gateway.gemspec  prestogres.gemspec
config/: pgpool.conf  pool_hba.conf  postgresql.conf
ext/: .gitignore  depend  extconf.rb  presto_pggw_config.c  prestogres_config.c
pgpool2/: child.c  config.h.in  configure  configure.in  pool.h  pool_auth.c  pool_config.c  pool_config.h  pool_config.l  pool_hba.c  pool_process_query.c  pool_proto_modules.c  pool_query_context.c  pool_rewrite_query.c  pool_rewrite_query.h  pool_select_walker.c  pool_select_walker.h  pool_session_context.h  pool_type.h
pgsql/: presto_client.py  prestogres.py  setup.sql  setup_functions.sql  setup_language.sql
prestogres/: ChangeLog  Makefile.am  Makefile.in  NOTICE
prestogres/config/: pgpool.conf  pool_hba.conf  prestogres-postgres.conf  prestogres.conf  prestogres_hba.conf
prestogres/pgsql/: presto_client.py  prestogres.py  setup.sql
prestogres/test/: Gemfile  Rakefile
prestogres/test/config/: config.properties  jvm.config  node.properties  prestogres_hba.conf
prestogres/test/spec/: login_spec.rb  spec_helper.rb
src/: Makefile.am  Makefile.in
src/auth/: pool_auth.c  pool_hba.c
src/config/: pool_config.c  pool_config.l
src/context/: pool_query_context.c
src/include/: pool.h  pool_config.h  pool_type.h
src/protocol/: child.c  pool_process_query.c  pool_proto_modules.c
src/rewrite/: pool_timestamp.c
src/system_db/: pool_system.c
(+6 files in other folders)
